--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5,8 +5,17 @@
 }
 
 body {
-  font: 13px Helvetica, Arial;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+header{
+  padding:1em;
+}
+
+a {
+  color: #00B7FF;
+}
+
 
 form {
   background: #000;
