--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,21 @@
 <html>
 <head>
   <title>MEANchats</title>
-<link href="../public/stylesheets/styles.css">
+<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 </head>
 <body>
-<h1> MEAN CHATS </h1>
+
+<header>
+<h1> MEAN chats </h1>
 <p> welcome to Express </p>
+</header>
+
+<ul id="messages"></ul>
+   <form id="chatForm" action="">
+     <input id="m" autocomplete="off" /><button>Send</button>
+   </form>
+
+   <script src="/socket.io/socket.io.js"></script>
+   <script src="/scripts/chat.js"></script>
 </body>
 </html>
