--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,8 @@
    </form>
 
    <script src="/socket.io/socket.io.js"></script>
+   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+
    <script src="/scripts/chat.js"></script>
 </body>
 </html>
