--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,7 +9,30 @@ body {
 }
 
 header{
+  background-color:#00897B;
+  color:white;
   padding:1em;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
+}
+
+#title{
+  font-size:2em;
+  margin-left:1em;
+}
+
+.noCat{
+  height: 5em;
+  width: 5em;
+}
+
+.claw{
+  color:#CCC;
+  font-size:.75em;
 }
 
 a {
@@ -18,31 +41,72 @@ a {
 
 
 form {
-  background: #000;
-  padding: 3px;
+  background:#FFF;
   position: fixed;
   bottom: 0;
+  left:0;
   width: 100%;
 }
 
-form input {
-  border: 0;
-  padding: 10px;
-  width: 90%;
-  margin-right: .5%;
+#MSGBOX{
+  display:flex;
+  flex-direction: row;
+  flex-grow:1;
+  margin:0;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
-form button {
-  width: 9%;
-  background: rgb(130, 224, 255);
-  border: none;
-  padding: 10px;
+#nickname{
+  padding:10px;
+  width:20%;
+  min-width:70px;
+  margin:3px;
 }
+
+#m{
+  padding:10px;
+  flex-grow: 1;
+  margin:3px;
+
+}
+
+#send{
+  padding:10px;
+  background-color:#03A9F4;
+  color:white;
+  min-width:60px;
+  border-radius:10px;
+  font-weight:bold;
+  margin:3px;
+
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+    /*http://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone*/
+  }
+}
+
+input:focus {
+    /*outline: none !important;*/
+    /*border:1px solid red;*/
+    box-shadow: 0 0 10px #03A9F4;
+}
+
 
 #messages {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  position:absolute;
+  bottom:50px;
+  width:100%;
+
 }
 
 #messages li {
