Looking at Username entry.

--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 
    <form id="chatForm" action="">
      <div id="MSGBOX">
-       <input id="nickname" placeholder="Name: " />
+       <input id="nickname" placeholder="Name: " type="text" maxlength="14" />
        <input id="m" autocomplete="off" />
        <button id="send">Send</button>
     </div>
